[package]
name = "sqlite-tenant"
description = "A libary for managing multiple sqlite databases with ease"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
log = { version = "0.4.21" }
flexi_logger = { version = "0.28.0" }

[dev-dependencies]
tempfile = "3.10.1"
